Fix the incorrect nav item text-overflow in the BitNav component based on Fluent #2880

--- a/src/BlazorUI/Bit.BlazorUI/Components/Nav/BitNav.Fluent.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Nav/BitNav.Fluent.scss
@@ -17,6 +17,7 @@
     overflow: hidden;
     cursor: pointer;
     user-select: none;
+    white-space: nowrap;
 
     @if $enabled {
         color: $Grey160;
